[package]
name = "tessen-wave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4.0"
num-traits = "0.2.14"
nalgebra = "0.30.1"
rand = "0.8.4"
rand_distr = "0.4.3"

bmp = "0.5.0"
[dev-dependencies]

